# real_estate_appraisal_sim

./: .ocamlformat  README.md  dune-project  makefile  run-game-server.sh
.github/workflows/: makefile.yml  run_tests.yml
client/src/: _base.sass  app.ml  dune  emb_questionbank.ml  emb_questionbank.mli  game.ml  game.mli  leaderboard.css  leaderboard_ui.ml  leaderboard_ui.mli  loading.css  multiplayer.css  multiplayer_ui.ml  multiplayer_ui.mli  page.ml  page.mli  result.sass  style.css  tic_tac_toe_2023_lib.ml  tic_tac_toe_2023_lib.mli
client/test/: app_test.ml  dune
common/: dune  protocol.ml  protocol.mli  tic_tac_toe_2023_common.ml
lib/: commandline.ml  commandline.mli  dbwrapper.ml  dune  leaderboard.ml  questionbank.ml  questionbank.mli  scoring.ml  scoring.mli  scrape.ml  scrape.mli  storage.ml  storage.mli
resources/: house_data.txt  leaderboard.txt
server/src/: dbwrapper.mli  dune  easy.ml  easy.mli  harness.ml  leaderboard.ml  leaderboard.mli  medium.ml  medium.mli  rpc_implementations.ml  rpc_implementations.mli  state.ml  state.mli  tic_tac_toe_2023_native.ml  tic_tac_toe_2023_native.mli  traverse.ml  traverse.mli
server/test/: dune  jsip_tic_tac_toe_test.ml
test/: dune
