(library
 (name tic_tac_toe_2023_lib)
 (libraries
  async_kernel
  bonsai
  bonsai.feather_icon
  bonsai.kado
  bonsai.uri_parsing
  bonsai.web
  bonsai.web_ui_form
  bonsai.web_ui_popover
  bonsai.web_ui_url_var
  core
  ppx_css
  tic_tac_toe_2023_common)
 (preprocess
  (pps ppx_css ppx_jane ppx_typed_fields bonsai.ppx_bonsai)))

(rule
 (targets style.ml style.mli style__generated.ml style__generated.mli)
 (deps style.css)
 (action
  (bash "%{bin:css_inliner} %{deps} \"((rewrite ()))\"")))
