(library
 (name tic_tac_toe_2023_lib)
 (libraries
  async_kernel
  bonsai
  bonsai.feather_icon
  bonsai.kado
  bonsai.uri_parsing
  bonsai.web
  bonsai.web_ui_form
  bonsai.web_ui_popover
  bonsai.web_ui_url_var
  core
  ppx_css
  tic_tac_toe_2023_common
  ;;real_estate_appraisal_sim
  )
 (preprocess
  (pps ppx_css ppx_jane ppx_typed_fields bonsai.ppx_bonsai)))

(rule
 (targets style.ml style.mli style__generated.ml style__generated.mli)
 (deps style.css)
 (action
  (bash "%{bin:css_inliner} %{deps} \"((rewrite ()))\"")))

(rule
 (targets
  leaderboard.ml
  leaderboard.mli
  leaderboard__generated.ml
  leaderboard__generated.mli)
 (deps leaderboard.css)
 (action
  (bash "%{bin:css_inliner} %{deps} \"((rewrite ()))\"")))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps %{bin:ocaml-embed-file} %{workspace_root}/resources/house_data.txt)
 (action
  (bash "%{deps} -output embedded_files")))
